--- a/htmls/branchhtmls/position.html
+++ b/htmls/branchhtmls/position.html
@@ -164,31 +164,34 @@
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Opera</th>
-						      <td>15.0+</td>
-						      <td>15.0+</td>
-						      <td>15.0-32.0</td>
-						      <td>15.0-32.0</td>
+						      <td class="m-green">15.0+</td>
+						      <td class="m-green">15.0+</td>
+						      <td class="m-red">15.0-32.0</td>
+						      <td class="m-red">15.0-32.0</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">IOS Safari</th>
-						      <td>6.0+</td>
-						      <td>6.0+</td>
-						      <td>6.0-9.0</td>
-						      <td>6.0-9.0<span>-webkit-</span></td>
+						      <td class="m-green">6.0+</td>
+						      <td class="m-green">6.0+</td>
+						      <td class="m-red">6.0-9.0</td>
+						      <td class="m-green">6.0-9.0<sup>-webkit-</sup></td>
 						    </tr>
 						    <tr>
-						      <th class="m-blue">Android Browser</th>
-						      <td>2.1+</td>
-						      <td>2.1-2.3#3<p>3.0+</p></td>
-						      <td>2.1-4.4.4</td>
-						      <td>2.1-4.4.4</td>
+						      <th rowspan="2" class="m-blue">Android Browser</th>
+						      <td rowspan="2" class="m-green">2.1+</td>
+						      <td class="m-pink">2.1-2.3<sup>#3</sup></td>
+						      <td rowspan="2" class="m-red">2.1-4.4.4</td>
+						      <td rowspan="2" class="m-red">2.1-4.4.4</td>
+						    </tr>
+						    <tr>
+						    	<td class="m-red">3.0+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Android Chrome</th>
-						      <td>18.0+</td>
-						      <td>18.0+</td>
-						      <td>18.0-42.0</td>
-						      <td>18.0-42.0</td>
+						      <td class="m-green">18.0+</td>
+						      <td class="m-green">18.0+</td>
+						      <td class="m-red">18.0-42.0</td>
+						      <td class="m-red">18.0-42.0</td>
 						    </tr>
 						  </tbody>
 						</table>
@@ -198,6 +201,14 @@
 					<li>3.需要定义了&lt;meta name="viewport" content="width=device-width, user-scalable=no"&gt;才生效</li>
 				</ul>
 			</div>
+			<a class="panel-block m-background">
+				 <span>示例：</span>  
+			</a>
+			<div class="panel-block control">
+				<textarea class="textarea" placeholder="textarea"></textarea>
+			</div>
+			<a href="#" class="button is-link m-run-html">运行</a>
+			<a href="#" class="button is-success is-pulled-right m-copy-code">复制</a>
 			
 			<p class="">
 			     <div class="m-dropdown-menu" id="dropdown-menu" role="menu">
@@ -271,5 +282,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
+		<script src="../../js/codetest.js"></script>
 	</body>
 </html>
