--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -29,7 +29,7 @@
 			</a>
 			<p class="panel-block">
 				<a href="branchhtmls/position.html">position</a>
-				<a>z-index</a>
+				<a href="branchhtmls/z-index.html">z-index</a>
 				<a>top</a>
 				<a>right</a>
 				<a>left</a>
