--- a/htmls/branchhtmls/z-index.html
+++ b/htmls/branchhtmls/z-index.html
@@ -12,9 +12,9 @@
 	</head>
 	<body>
 		<div class="container">
-				<nav class="panel is-unselectable">
+			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				position&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				z-index&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,22 +30,22 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>position：</strong><span class="m-border-bg">static</span>|<span>relative</span>|<span>absolute</span>|<span>fixed</span>|<span class="m-color-super">center</span><span class="m-css3-super">css3</span>|<span class="m-color-super">page</span><span class="m-css3-super">css3</span>|<span class="m-color-super">sticky</span><span class="m-css3-super">css3</span>
+						<strong>z-index：</strong><span class="m-border-bg">auto</span><span>|</span><span>&lt;integer&gt;</span>
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">static</span>
+						<strong>默认值：</strong><span class="m-border-bg">auto</span>
 					</li>
 					<li>
-						<strong>适用于：</strong><span>除display属性定义为table-column-group | table-column之外的所有元素</span>
+						<strong>适用于：</strong><span>定位元素。即定义了position为非static的元素。</span>
 					</li>
 					<li>
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>否</span>
+						<strong>动画性：</strong><span>当值为&lt;integer&gt;时</span>
 					</li>
 					<li>
-						<strong>计算值：</strong><span>指定值</span>
+						<strong>计算值：</strong><span>指定的值</span>
 					</li>
 					<li>
 						<strong>媒体：</strong><span>视觉</span>
@@ -58,28 +58,7 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>static：</strong><span>对象遵循常规流。此时4个定位偏移属性不会被应用。</span>
-					</li>
-					<li>
-						<strong>relative：</strong><span>对象遵循常规流，并且参照自身在常规流中的位置通过top，right，bottom，left这4个定位偏移属性进行偏移时不会影响常规流中的任何元素。</span>
-					</li>
-					<li>
-						<strong>absolute：</strong><span>对象脱离常规流，此时偏移属性参照的是离自身最近的定位祖先元素，如果没有定位的祖先元素，则一直回溯到body元素。盒子的偏移位置不影响常规流中的任何元素，其margin不与其他任何margin折叠。</span>
-					</li>
-					<li>
-						<strong>fixed：</strong><span>与absolute一致，但偏移定位是以窗口为参考。当出现滚动条时，对象不会随着滚动。</span>
-					</li>
-					<li>
-						<strong>center：</strong><span>与absolute一致，但偏移定位是以定位祖先元素的中心点为参考。盒子在其包含容器垂直水平居中。（CSS3）</span>
-					</li>
-					<li>
-						<strong>page：</strong><span>与absolute一致。元素在分页媒体或者区域块内，元素的包含块始终是初始包含块，否则取决于每个absolute模式。（CSS3）</span>
-					</li>
-					<li>
-						<strong>sticky：</strong><span>对象在常态时遵循常规流。它就像是relative和fixed的合体，当在屏幕中时按常规流排版，当卷动到屏幕外时则表现如fixed。该属性的表现是现实中你见到的吸附效果。（CSS3）</span>
-					</li>
-					<li>
-						<span>* CSS3新增属性可能存在描述错误及变更，仅供参考，持续更新</span>
+						<strong>auto：</strong><span>元素在当前层叠上下文中的层叠级别是0。元素不会创建新的局部层叠上下文，除非它是根元素。&lt;integer&gt;：用整数值来定义堆叠级别。可以为负值。</span>
 					</li>
 				</ul>
 			</div>
@@ -89,7 +68,10 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>检索对象的定位方式：</strong><span>当position的值为非static时，其层叠级别通过z-index属性定义。绝对定位的元素，在top，right，bottom，left属性未设置时，会紧随在其前面的兄弟元素之后，但在位置上不影响常规流中的任何元素。</span>
+						<strong>检索或设置对象的层叠顺序：</strong><span>z-index用于确定元素在当前层叠上下文中的层叠级别，并确定该元素是否创建新的局部层叠上下文。每个元素层叠顺序由所属的层叠上下文和元素
+							本身的层叠级别决定（每个元素仅属于一个层叠上下文）。同一个层叠上下文中，层叠级别大的显示在上面，反之显示在下面。同一个层叠上下文中，层叠级别相同的两个元素，依据它们在HTML文档流
+							中的顺序，写在后面的将会覆盖前面的。不同层叠上下文中，元素的显示顺序依据祖先的层叠级别来决定，与自身的层叠级别无关。当z-index未定义或者值为auto时，在IE6,7下会创建新的局部层叠上
+							下文，而在高级浏览器中，按照规范不产生新的局部层叠上下文</span>
 					</li>
 				</ul>
 			</div>
@@ -110,95 +92,64 @@
 						    <tr>
 						      <th class="m-blue"><abbr title="values">Values</abbr></th>
 						      <th>Basic Support</th>
-						      <th><abbr title="fixed">Fixed</abbr></th>
-						      <th>Center | Page</th>
-						      <th>Sticky</th>
+						      <th>负值<sup>#1</sup></th>
 						    </tr>
 						  </thead>
 						  <tfoot>
 						   <tr>
 						      <th class="m-blue"><abbr title="values">Values</abbr></th>
 						      <th>Basic Support</th>
-						      <th><abbr title="fixed">Fixed</abbr></th>
-						      <th>Center | Page</th>
-						      <th>Sticky</th>
+						      <th>负值<sup>#1</sup></th>
 						    </tr>
 						  </tfoot>
 						  <tbody>
 						    <tr>
-						      <th rowspan="2" class="m-blue">IE</th>
-						      <td rowspan="2" class="m-green">6.0+<sup>#1</sup></td>
-						      <td class="m-red">6.0</td>
-						      <td rowspan="2" class="m-red">6.0-11.0</td>
-						      <td rowspan="2" class="m-red">6.0-11.0</td>
-						    </tr>
-						    <tr>
-						      <td class="m-green">7.0+</td>
+						      <th class="m-blue">IE</th>
+						      <td class="m-green">6.0+</td>
+						      <td class="m-green">6.0+</td>
 						    </tr>
 						    <tr>
 						      <th rowspan="2" class="m-blue">Firefox</th>
-						      <td rowspan="2" class="m-green">2.0+<sup>#2</sup></td>
 						      <td rowspan="2" class="m-green">2.0+</td>
-						      <td rowspan="2" class="m-red">2.0-42.0</td>
-						      <td class="m-red">2.0-31.0</td>
+						      <td class="m-red">1.0-2.0</td>
 						    </tr>
 						     <tr>
-						      <td class="m-green">32.0+</td>
+						      <td class="m-green">3.0+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Chrome</th>
 						      <td class="m-green">4.0+</td>
 						      <td class="m-green">4.0+</td>
-						      <td class="m-red">4.0-47.0</td>
-						      <td class="m-red">4.0-47.0</td>
 						    </tr>
 						     <tr>
-						      <th rowspan="2" class="m-blue">Safari</th>
-						      <td rowspan="2" class="m-green">6.0+</td>
-						      <td rowspan="2" class="m-green">6.0+</td>
-						      <td rowspan="2" class="m-red">6.0-9.0</td>
-						      <td class="m-red">6.0</td>
-						    </tr>
-						     <tr>
-						      <td class="m-green">6.1-9.0<sup>-webkit-</sup></td>
+						      <th class="m-blue">Safari</th>
+						      <td class="m-green">6.0+</td>
+						      <td class="m-green">6.0+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Opera</th>
 						      <td class="m-green">15.0+</td>
 						      <td class="m-green">15.0+</td>
-						      <td class="m-red">15.0-32.0</td>
-						      <td class="m-red">15.0-32.0</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">IOS Safari</th>
 						      <td class="m-green">6.0+</td>
 						      <td class="m-green">6.0+</td>
-						      <td class="m-red">6.0-9.0</td>
-						      <td class="m-green">6.0-9.0<sup>-webkit-</sup></td>
 						    </tr>
 						    <tr>
-						      <th rowspan="2" class="m-blue">Android Browser</th>
-						      <td rowspan="2" class="m-green">2.1+</td>
-						      <td class="m-pink">2.1-2.3<sup>#3</sup></td>
-						      <td rowspan="2" class="m-red">2.1-4.4.4</td>
-						      <td rowspan="2" class="m-red">2.1-4.4.4</td>
-						    </tr>
-						    <tr>
-						    	<td class="m-red">3.0+</td>
+						      <th class="m-blue">Android Browser</th>
+						      <td class="m-green">2.1+</td>
+						      <td class="m-green">2.1+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Android Chrome</th>
 						      <td class="m-green">18.0+</td>
 						      <td class="m-green">18.0+</td>
-						      <td class="m-red">18.0-42.0</td>
-						      <td class="m-red">18.0-42.0</td>
 						    </tr>
 						  </tbody>
 						</table>
 					</li>
-					<li>1.IE如果在 quirks mode下将不支持；</li>
-					<li>2.Firefox30.0开始支持 tr, thead, tfoot, tbody 定义 relative，Firefox30.0之前的版本及其它浏览器都只能给 table 定义 relative 用以约束内部元素的定位；</li>
-					<li>3.需要定义了&lt;meta name="viewport" content="width=device-width, user-scalable=no"&gt;才生效</li>
+					<li>1.z-index负值是CSS2.1中定义的，在CSS2中是不被支持的；</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -282,6 +233,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/position-code.js"></script>
+		<script src="../../js/zindex-code.js"></script>
 	</body>
 </html>
