--- a/htmls/properties.html
+++ b/htmls/properties.html
@@ -16,7 +16,7 @@
 		<div class="container">
 				<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				CSS参考手册&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				CSS参考手册&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -35,7 +35,7 @@
 				</p>
 			</div>
 			<a class="panel-block is-wrapped" data-target="properties">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -45,7 +45,7 @@
 			    <div class="m-hide-menu control is-hidden">
 			    	<ul>
 			    		<li class="panel-block is-wrapped" data-target="positioning">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -100,7 +100,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="layout">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -155,7 +155,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="dimension">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -204,7 +204,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="margin">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -247,7 +247,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="padding">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -290,7 +290,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="border">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -501,7 +501,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="background">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -568,7 +568,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="color">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -593,7 +593,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="font">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -654,7 +654,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="text">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -757,7 +757,7 @@
 					    	</div>					    		
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="textDecoration">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -812,7 +812,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="writingModes">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -843,7 +843,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="list">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -880,7 +880,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="table">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -923,7 +923,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="content">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -960,7 +960,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="userInterface">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1087,7 +1087,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="multiColumn">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1178,7 +1178,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="flexibleBox-old">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1239,7 +1239,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="flexibleBox-new">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1324,7 +1324,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="transform">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1373,7 +1373,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="transition">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1416,7 +1416,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="animation">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1483,7 +1483,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="printing">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1520,7 +1520,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="mediaQueries">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1611,7 +1611,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="onlyIE">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1684,7 +1684,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="onlyFirefox">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1727,7 +1727,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="onlyWebkit">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1785,7 +1785,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="selectors">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -1795,7 +1795,7 @@
 			    <div class="m-hide-menu control is-hidden">
 			    	<ul>
 			    		<li class="panel-block is-wrapped" data-target="elementSelector">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1832,7 +1832,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="relationSelector">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1869,7 +1869,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="propertySelector">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -1924,7 +1924,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="pseudoClass">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2093,7 +2093,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="pseudoObject">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2145,7 +2145,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="rules">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2212,7 +2212,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="values">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2222,7 +2222,7 @@
 		        <div class="m-hide-menu control is-hidden">
 			    	<ul>
 			    		<li class="panel-block is-wrapped" data-target="length">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2331,7 +2331,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="angle">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2374,7 +2374,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="time">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2405,7 +2405,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="frequency">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2436,7 +2436,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="layoutSpecific">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2473,7 +2473,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="resolution">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2510,7 +2510,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="color">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2577,7 +2577,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="textual">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2626,7 +2626,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="functional">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2651,7 +2651,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="content">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2682,7 +2682,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="image">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2743,7 +2743,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="numeric">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2777,7 +2777,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="appendix">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2802,7 +2802,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="hack">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2833,7 +2833,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="questions">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2870,7 +2870,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="webkit">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
@@ -2880,7 +2880,7 @@
 				<div class="m-hide-menu control is-hidden">
 			    	<ul>
 			    		<li class="panel-block is-wrapped" data-target="vision">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2905,7 +2905,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="text">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2924,7 +2924,7 @@
 					    	</div>
 			    		</li>
 			    		<li class="panel-block is-wrapped" data-target="action">
-			    			<span class="panel-icon">
+			    			<span class="panel-icon is-size-6">
 								<i class="fa fa-plus-square-o"></i>	
 							</span>
 							<span class="panel-icon">
@@ -2952,7 +2952,7 @@
 			    </div>
 			</a>
 			<a class="panel-block is-wrapped" data-target="introduction">
-				<span class="panel-icon">
+				<span class="panel-icon is-size-5">
 					<i class="fa fa-plus-square-o"></i>	
 				</span>
 				<span class="panel-icon">
