--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -30,16 +30,17 @@
 			<p class="panel-block">
 				<a href="branchhtmls/position.html">position</a>
 				<a href="branchhtmls/z-index.html">z-index</a>
-				<a>top</a>
-				<a>right</a>
-				<a>left</a>
-				<a>clip</a>
+				<a href="branchhtmls/top.html">top</a>
+				<a href="branchhtmls/right.html">right</a>
+				<a href="branchhtmls/bottom.html">bottom</a>
+				<a href="branchhtmls/left.html">left</a>
+				<a href="branchhtmls/clip.html">clip</a>
 			</p>
 			<a class="panel-block m-background">
 				 <span>布局 Layout</span>  
 			</a>
 			<p class="panel-block">
-			    <a>display</a>
+			    <a href="branchhtmls/display.html">display</a>
 			    <a>float</a>
 			    <a>clear</a>
 			    <a>visibility</a>
