--- a/htmls/quicksearch.html
+++ b/htmls/quicksearch.html
@@ -12,9 +12,9 @@
 	</head>
 	<body>
 		<div class="container">
-				<nav class="panel is-unselectable">
+		  <nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				<span>CSS速查表  Quick Search</span>
+				CSS速查表  Quick Search
 				<a class="button is-link m-copy m-start">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -41,8 +41,8 @@
 			</a>
 			<p class="panel-block">
 			    <a href="branchhtmls/display.html">display</a>
-			    <a>float</a>
-			    <a>clear</a>
+			    <a href="branchhtmls/float.html">float</a>
+			    <a href="branchhtmls/clear.html">clear</a>
 			    <a>visibility</a>
 			    <a>overflow</a>
 			    <a>overflow-x</a>
