--- a/htmls/branchhtmls/clear.html
+++ b/htmls/branchhtmls/clear.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				top
+				clear
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,27 +30,22 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>top：</strong><span class="m-border-bg">auto</span><span>|</span><span>&lt;length&gt;</span><span>|</span><span>&lt;percentage&gt;</span>
+						<strong>clear：</strong><span class="m-border-bg">none</span> | left | right | both
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">auto</span>
+						<strong>默认值：</strong><span class="m-border-bg">none</span>
 					</li>
 					<li>
-						<strong>适用于：</strong><span>定位元素。即定义了position为非static的元素。</span>
+						<strong>适用于：</strong><span>块级元素</span>
 					</li>
 					<li>
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>当值为&lt;length&gt;</span><span>|</span><span>&lt;percentage&gt;时</span>
+						<strong>动画性：</strong><span>否</span>
 					</li>
 					<li>
-						<strong>计算值：</strong><span>当position为static时，计算值是auto。为relative时，如果top和bottom都是auto，则它们的计算值是0；如果top和bottom其中一个为auto，
-							则auto相当于另一个的负值，即top = -bottom；如果top和bottom的值都不为auto，则忽略bottom。否则在其它情况下，当指定值为&lt;length&gt;时，计算值为指定值，当指定值
-							为&lt;percentage&gt;时，计算值为计算后的绝对值。除去这些情况，都为auto</span>
-					</li>
-					<li>
-						<strong>媒体：</strong><span>视觉</span>
+						<strong>计算值：</strong><span>指定的值</span>
 					</li>
 				</ul>
 			</div>
@@ -60,8 +55,16 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>auto：</strong><span>无特殊定位，根据HTML定位规则在文档流中分配&lt;length&gt;：用长度值来定义距离顶部的偏移量。可以为负值。&lt;percentage&gt;：用百分比来定义
-							距离顶部的偏移量。百分比参照包含块的高度。可以为负值。</span>
+						<strong>none：</strong><span>允许两边都可以有浮动对象</span>
+					</li>
+					<li>
+						<strong>both：</strong><span>不允许有浮动对象</span>
+					</li>
+					<li>
+						<strong>left：</strong><span>不允许左边有浮动对象</span>
+					</li>
+					<li>
+						<strong>right：</strong><span>不允许右边有浮动对象</span>
 					</li>
 				</ul>
 			</div>
@@ -71,8 +74,10 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>检索或设置对象参照相对物顶边界向下偏移位置：</strong><span>该属性用来指定盒子参照相对物顶边界向下偏移。相对定位元素的相对物是自身，绝对定位和居中定位元素是从包含块
-							的padding边界开始计算偏移值对应的脚本特性为top。</span>
+						<strong>该属性的值指出了不允许有浮动对象的边。</strong><span>请参阅float属性</span>
+					</li>
+					<li>
+						<span>对应的脚本特性为clear。</span>
 					</li>
 				</ul>
 			</div>
@@ -92,53 +97,31 @@
 						  <thead>
 						    <tr>
 						      <th class="m-blue"><abbr title="values">Values</abbr></th>
-						      <th>Basic Support</th>
+						      <th class="m-blue">IE</th>
+						      <th class="m-blue">Firefox</th>
+						      <th class="m-blue">Chrome</th>
+						      <th class="m-blue">Safari</th>
+						      <th class="m-blue">Opera</th>
+						      <th class="m-blue">IOS Safari</th>
+						      <th class="m-blue">Android Browser</th>
+						      <th class="m-blue">Android Chrome</th>
 						    </tr>
 						  </thead>
-						  <tfoot>
-						   <tr>
-						      <th class="m-blue"><abbr title="values">Values</abbr></th>
-						      <th>Basic Support</th>
-						    </tr>
-						  </tfoot>
 						  <tbody>
-						    <tr>
-						      <th class="m-blue">IE</th>
-						      <td class="m-green">6.0+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">Firefox</th>
-						      <td class="m-green">2.0+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">Chrome</th>
-						      <td class="m-green">4.0+</td>
-						    </tr>
 						     <tr>
-						      <th class="m-blue">Safari</th>
-						      <td class="m-green">6.0+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">Opera</th>
-						      <td class="m-green">15.0+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">IOS Safari</th>
-						      <td class="m-green">6.0+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">Android Browser</th>
-						      <td class="m-green">2.1+</td>
-						    </tr>
-						    <tr>
-						      <th class="m-blue">Android Chrome</th>
-						      <td class="m-green">18.0+</td>
-						    </tr>
+						     	<th>Basic Support</th>
+						     	<td class="m-green">6.0+</td>
+						     	<td class="m-green">2.0+</td>
+						     	<td class="m-green">4.0+</td>
+						     	<td class="m-green">3.1+</td>
+						     	<td class="m-green">3.5+</td>
+						     	<td class="m-green">3.2+</td>
+						     	<td class="m-green">2.1+</td>
+						     	<td class="m-green">18.0+</td>
+						     </tr>
 						  </tbody>
 						</table>
 					</li>
-					<li>1.在IE6及以前的版本下，如果top和bottom都定义了非auto的值，那么 bottom 的计算值将会被设置为 -top（无论是否显式的定义了 height 或 max-height），
-						它的指定值将被忽略，说白了，你将无法在不指定某个元素高度的情况，通过给元素指定top和bottom的方式来进行高度拉伸；</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -222,6 +205,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/top-code.js"></script>
+		<script src="../../js/clear-code.js"></script>
 	</body>
 </html>
