--- a/htmls/branchhtmls/float.html
+++ b/htmls/branchhtmls/float.html
@@ -14,7 +14,7 @@
 		<div class="container">
 			<nav class="panel is-unselectable">
 			<p class="panel-heading has-text-info">
-				top
+				float
 				<a class="button is-link m-copy">复制本页链接</a>
 			    <a class="button is-success">
 			    	<span>分享</span>
@@ -30,24 +30,22 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>top：</strong><span class="m-border-bg">auto</span><span>|</span><span>&lt;length&gt;</span><span>|</span><span>&lt;percentage&gt;</span>
+						<strong>float：</strong><span class="m-border-bg">none</span> | left | right
 					</li>
 					<li>
-						<strong>默认值：</strong><span class="m-border-bg">auto</span>
+						<strong>默认值：</strong><span class="m-border-bg">none</span>
 					</li>
 					<li>
-						<strong>适用于：</strong><span>定位元素。即定义了position为非static的元素。</span>
+						<strong>适用于：</strong><span>所有元素</span>
 					</li>
 					<li>
 						<strong>继承性：</strong><span>无</span>
 					</li>
 					<li>
-						<strong>动画性：</strong><span>当值为&lt;length&gt;</span><span>|</span><span>&lt;percentage&gt;时</span>
+						<strong>动画性：</strong><span>否</span>
 					</li>
 					<li>
-						<strong>计算值：</strong><span>当position为static时，计算值是auto。为relative时，如果top和bottom都是auto，则它们的计算值是0；如果top和bottom其中一个为auto，
-							则auto相当于另一个的负值，即top = -bottom；如果top和bottom的值都不为auto，则忽略bottom。否则在其它情况下，当指定值为&lt;length&gt;时，计算值为指定值，当指定值
-							为&lt;percentage&gt;时，计算值为计算后的绝对值。除去这些情况，都为auto</span>
+						<strong>计算值：</strong><span>指定的值</span>
 					</li>
 					<li>
 						<strong>媒体：</strong><span>视觉</span>
@@ -60,8 +58,13 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>auto：</strong><span>无特殊定位，根据HTML定位规则在文档流中分配&lt;length&gt;：用长度值来定义距离顶部的偏移量。可以为负值。&lt;percentage&gt;：用百分比来定义
-							距离顶部的偏移量。百分比参照包含块的高度。可以为负值。</span>
+						<strong>none：</strong><span>设置对象不浮动</span>
+					</li>
+					<li>
+						<strong>left：</strong><span>设置对象浮在左边</span>
+					</li>
+					<li>
+						<strong>right：</strong><span>设置对象浮在右边</span>
 					</li>
 				</ul>
 			</div>
@@ -71,8 +74,16 @@
 			<div class="panel-block control">
 				<ul>
 					<li>
-						<strong>检索或设置对象参照相对物顶边界向下偏移位置：</strong><span>该属性用来指定盒子参照相对物顶边界向下偏移。相对定位元素的相对物是自身，绝对定位和居中定位元素是从包含块
-							的padding边界开始计算偏移值对应的脚本特性为top。</span>
+						<strong>该属性的值指出了对象是否及如何浮动。</strong><span>请参阅clear属性</span>
+					</li>
+					<li>
+						<span>如果float不是none，当display:inline-table时，display的计算值为table；当display:inline | inline-block | run-in | table-* 系时，display的计算值为block，其它情况为指定值；</span>
+					</li>
+					<li>
+						<span>float在绝对定位和display为none时不生效。</span>
+					</li>
+					<li>
+						<span>对应的脚本特性为styleFloat（IE）或cssFloat（非IE）。(注意这里为styleFloat或cssFloat，而不是float)</span>
 					</li>
 				</ul>
 			</div>
@@ -116,15 +127,15 @@
 						    </tr>
 						     <tr>
 						      <th class="m-blue">Safari</th>
-						      <td class="m-green">6.0+</td>
+						      <td class="m-green">3.1+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Opera</th>
-						      <td class="m-green">15.0+</td>
+						      <td class="m-green">7.0+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">IOS Safari</th>
-						      <td class="m-green">6.0+</td>
+						      <td class="m-green">3.2+</td>
 						    </tr>
 						    <tr>
 						      <th class="m-blue">Android Browser</th>
@@ -137,8 +148,7 @@
 						  </tbody>
 						</table>
 					</li>
-					<li>1.在IE6及以前的版本下，如果top和bottom都定义了非auto的值，那么 bottom 的计算值将会被设置为 -top（无论是否显式的定义了 height 或 max-height），
-						它的指定值将被忽略，说白了，你将无法在不指定某个元素高度的情况，通过给元素指定top和bottom的方式来进行高度拉伸；</li>
+					<li>1.Basic Support包含值：auto | rect(空格分隔)</li>
 				</ul>
 			</div>
 			<a class="panel-block m-background">
@@ -222,6 +232,6 @@
 		</div>
 		<script src="../../js/clipboard.min.js"></script>
 		<script src="../../js/common.js"></script>
-		<script src="../../js/top-code.js"></script>
+		<script src="../../js/float-code.js"></script>
 	</body>
 </html>
